Run.sh Updated